WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306183
AX: When ITM is on, web areas never return true for is-focused queries, differing from ITM off and causing accessibility/mac/document-attributes.html to fail
https://bugs.webkit.org/show_bug.cgi?id=306183
Summary
AX: When ITM is on, web areas never return true for is-focused queries, diffe...
Tyler Wilcock
Reported
2026-01-24 11:46:17 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-24 11:46:23 PST
<
rdar://problem/168837322
>
Tyler Wilcock
Comment 2
2026-01-24 11:53:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57179
EWS
Comment 3
2026-02-07 20:09:03 PST
Committed
307024@main
(edf9025de79c): <
https://commits.webkit.org/307024@main
> Reviewed commits have been landed. Closing PR #57179 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug