AX: When ITM is on, web areas never return true for is-focused queries, differing from ITM off and causing accessibility/mac/document-attributes.html to fail https://bugs.webkit.org/show_bug.cgi?id=306183 rdar://168837322

Reviewed by Joshua Hoffman.

Whether a web area isFocused corresponds to whether the associated Document's frame is focused and active. With this
commit, we start tracking this state via a new property only for web areas, and use it in AXIsolatedObject::isFocused,
allowing accessibility/mac/document-attributes.html to start passing in ITM.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::setIsolatedTreeFocusedObject):
(WebCore::AXObjectCache::onFrameSelectionFocusedOrActiveStateChanged):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::isFocused const):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):
(WebCore::createIsolatedObjectData):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::focusedOrActiveStateChanged):

Canonical link: https://commits.webkit.org/307024@main