Source/WebCore/accessibility/AXLogger.cpp
@@ -738,6 +738,9 @@ TextStream& operator<<(WTF::TextStream& stream, AXProperty property)
     case AXProperty::ColumnIndexRange:
         stream << "ColumnIndexRange";
         break;
+    case AXProperty::IsFocusedWebArea:
+        stream << "IsFocusedWebArea";
+        break;
     case AXProperty::CrossFrameChildFrameID:
         stream << "CrossFrameChildFrameID";
         break;
